--- a/Lista_de_formulario_bootstrap/F1.html
+++ b/Lista_de_formulario_bootstrap/F1.html
@@ -7,38 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1 class="conteiner">Formulario 1</h1>    
-    <form class="conteiner">
+    <h1 class="container">Formulario 1</h1>    
+    <form class="container">
         <div class="row">
-            <div class="col-4">
-                <label>Primeiro Nome</labol>
+            <div class="col-5">
+                <label>Primeiro Nome</label>
                 <input class="form-control">
             </div>
-            <div class="col-3">
-                <label>Segundo Nome</labol>
+            <div class="col-4">
+                <label>Segundo Nome</label>
                 <input class="form-control">
             </div>
             
             <div class="col-3">
-                <label>gg</label>
+                <label>Username</label>
                 <div class="input-group">                    
                     <span class="input-group-text">@</span>
-                    <input type="text" class="form-control" placeholder="dominio.com" aria-label="Dominio">
+                    <input class="form-control">
                 </div>
                 
             </div>
         </div>
         <div class="row">
-            <div class="col-4">
-                <labol>Primeiro Nome</labol>
+            <div class="col-6">
+                <label>Cidade</label>
                 <input class="form-control">
             </div>
             <div class="col-3">
-                <labol>Segundo Nome</labol>
+                <label>Estado</label>
                 <input class="form-control">
             </div>
             <div class="col-3">
-                <labol>Username</labol>
+                <label>CEP</label>
                 <input class="form-control">
             </div>
         </div>
