--- a/Lista_de_formulario_bootstrap/F1.html
+++ b/Lista_de_formulario_bootstrap/F1.html
@@ -42,6 +42,11 @@
                 <input class="form-control">
             </div>
         </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" >
+            <label>Aceito termos e condições </label>
+        </div>
+        <button type="button" class="btn btn-primary">Enviar formulario</button>
     </form>
 
 
