--- a/Lista_de_formulario_bootstrap/F2.html
+++ b/Lista_de_formulario_bootstrap/F2.html
@@ -18,12 +18,11 @@
             <div class="row mb-3">
                 <div class="col-1">
                     <label for="codigo" class="form-label">Código</label>
-                    <input type="text" name="codigo" id="codigo" class="form-control" placeholder="00">
+                    <input type="text" name="codigo" id="codigo" class="form-control">
                 </div>
                 <div class="col-5">
-                    <label for="nome" class="form-label">Nome</label>
-                    <input type="text" name="nome" id="nome" class="form-control"
-                        placeholder="Nome Completo do cliente">
+                    <label for="nome" class="form-label">Nome Completo</label>
+                    <input type="text" name="nome" id="nome" class="form-control">
                 </div>
                 <div class="col">
                     <label for="email" class="form-label">E-mail</label>
@@ -31,7 +30,7 @@
                 </div>
                 <div class="col-2">
                     <label for="cpf" class="form-label">CPF</label>
-                    <input type="text" name="cpf" id="cpf" class="form-control" placeholder="000.000.000-00">
+                    <input type="text" name="cpf" id="cpf" class="form-control">
                 </div>
             </div>
 
@@ -39,16 +38,15 @@
             <div class="row mb-3">
                 <div class="col">
                     <label for="celular" class="form-label">N° Celular</label>
-                    <input type="text" name="celular" id="celular" class="form-control" placeholder="ex:(99)99699-9999">
+                    <input type="text" name="celular" id="celular" class="form-control">
                 </div>
                 <div class="col">
                     <label for="telefone" class="form-label">Telefone</label>
-                    <input type="text" name="telefone" id="telefone" class="form-control"
-                        placeholder="ex:(99)3908-3636">
+                    <input type="text" name="telefone" id="telefone" class="form-control">
                 </div>
                 <div class="col">
                     <label for="cep" class="form-label">CEP</label>
-                    <input type="text" name="cep" id="cep" class="form-control" placeholder="190...">
+                    <input type="text" name="cep" id="cep" class="form-control">
                 </div>
                 <div class="col">
                     <label for="logradouro" class="form-label">Logradouro</label>
@@ -65,6 +63,30 @@
                 </div>
             </div>
 
+            <!-- Linha 3 -->
+            <div class="row mb-3">
+                <div class="col-3">
+                    <label for="cidade" class="form-label">Cidade</label>
+                    <input type="text" name="cidade" id="cidade" class="form-control" placeholder="--">
+                </div>
+                <div class="col-1">
+                    <label for="uf" class="form-label">UF</label>
+                    <input type="text" name="uf" id="uf" class="form-control" placeholder="SP">
+                </div>
+                <div class="col-2">
+                    <label for="status" class="form-label">Status</label>
+                    <select class="form-select form-select-lg mb-3">
+                        <option selected>--Select--</option> <!--caixa de opcoes-->
+                        <option value="1">Casado</option>
+                        <option value="2">Solteiro</option>
+                        <option value="3">Divorciado</option>
+                    </select>
+                </div>
+                <div class="col d-flex gap-1 align-items-end">
+                    <button type="button" class="btn btn-danger">recusar</button>
+                    <button type="button" class="btn btn-success">proximo</button>
+                </div>
+            </div>
 
         </form>
     </main>
